EEC_InitBackup/src/objects/Licensing_Transaction__c.object
<CustomObject>
    <fields>
        <fullName>Took_USDA_Nutrition_Training__c</fullName>
        <label>Took USDA Nutrition Training</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Took_Upgrading_Capacity_Training__c</fullName>
        <label>Took Upgrading  Capacity Training</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Payment_Received__c</fullName>
        <label>Total Payment Received</label>
        <summarizedField>Payments_Received__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Payments_Received__c.Payment_Status__c</field>
            <operation>equals</operation>
            <value>Deposited</value>
        </summaryFilterItems>
        <summaryForeignKey>Payments_Received__c.Associated_Transactions__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Training_Review__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Training Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Transportation_Training_Cert__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checked if the Transportation Training Certificate has been uploaded.</inlineHelpText>
        <label>Transportation Training Cert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>USDA_Nutrition_Training_Evidence__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checked if the USDA Nutrition Training Evidence has been uploaded.</inlineHelpText>
        <label>USDA Nutrition Training Evidence</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Under_Review_Start_Date__c</fullName>
        <inlineHelpText>Date all documents / fees were received and the transaction was ready for review</inlineHelpText>
        <label>Under Review Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Upgrading_Capacity_Training_Cert__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checked if the Upgrading Capacity Training Certificate has been uploaded.</inlineHelpText>
        <label>Upgrading Capacity Training Cert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Use_Family_Child_Care_System_Descrip__c</fullName>
        <label>Use Family Child Care System Descrip.</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Use_Family_Child_Care_System__c</fullName>
        <label>Use Family Child Care System</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Use_of_Alcoholic_Bev_Narcotics_Drugs__c</fullName>
        <inlineHelpText>Use of Alcoholic Beverages, Narcotics, Drugs</inlineHelpText>
        <label>Use of Alcoholic Bev., Narcotics, Drugs</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Well_Water_Test_Evidence__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checked if the Well Water Test Evidence has been uploaded.</inlineHelpText>
        <label>Well Water Test Evidence</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Which_Food_Program__c</fullName>
        <label>Which Food Program</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Work_Phone_Number__c</fullName>
        <inlineHelpText>Current work phone number</inlineHelpText>
        <label>Work Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Working_With_Assistant__c</fullName>
        <inlineHelpText>Provider is working with an Assistant(s) or intending to work with an assistant?</inlineHelpText>
        <label>Working With Assistant</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Licensing Transaction</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Provider__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Status__c</columns>
        <columns>Last_Reached_Step__c</columns>
        <columns>Submitter__c</columns>
        <columns>Submission_Date__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Fee_Paid__c</columns>
        <columns>License_Issue_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Trans. - All</label>
    </listViews>
    <listViews>
        <fullName>All_In_Closed_Last_Month</fullName>
        <columns>NAME</columns>
        <columns>Provider__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Status__c</columns>
        <columns>Last_Reached_Step__c</columns>
        <columns>Submitter__c</columns>
        <columns>Submission_Date__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Fee_Paid__c</columns>
        <columns>License_Issue_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Closed (Processed),Closed (License Issued / Updated)</value>
        </filters>
        <filters>
            <field>Date_Closed__c</field>
            <operation>equals</operation>
            <value>LAST_MONTH</value>
        </filters>
        <label>Trans. - Closed Last Month</label>
    </listViews>
    <listViews>
        <fullName>All_In_Closed_This_Month</fullName>
        <columns>NAME</columns>
        <columns>Provider__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Status__c</columns>
        <columns>Last_Reached_Step__c</columns>
        <columns>Submitter__c</columns>
        <columns>Submission_Date__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Fee_Paid__c</columns>
        <columns>License_Issue_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Closed (Processed),Closed (License Issued / Updated)</value>
        </filters>
        <filters>
            <field>Date_Closed__c</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Trans. - Closed This Month</label>
    </listViews>
    <listViews>
        <fullName>All_In_Closed_This_Year</fullName>
        <columns>NAME</columns>
        <columns>Provider__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Status__c</columns>
        <columns>Last_Reached_Step__c</columns>
        <columns>Submitter__c</columns>
        <columns>Submission_Date__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Fee_Paid__c</columns>
        <columns>License_Issue_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Closed (Processed),Closed (License Issued / Updated)</value>
        </filters>
        <filters>
            <field>Date_Closed__c</field>
            <operation>equals</operation>
            <value>THIS_YEAR</value>
        </filters>
        <label>Trans. - Closed This Year</label>
    </listViews>
    <listViews>
        <fullName>All_In_Progress</fullName>
        <columns>NAME</columns>
        <columns>Provider__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Status__c</columns>
        <columns>Last_Reached_Step__c</columns>
        <columns>Submitter__c</columns>
        <columns>Submission_Date__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Fee_Paid__c</columns>
        <columns>License_Issue_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Submitted,Under Review,Pending Manager Approval,Approved By Manager</value>
        </filters>
        <label>Trans. - In Progress</label>
    </listViews>
    <listViews>
        <fullName>All_Not_Closed_Delay</fullName>
        <columns>NAME</columns>
        <columns>Provider__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Status__c</columns>
        <columns>Last_Reached_Step__c</columns>
        <columns>Submitter__c</columns>
        <columns>Submission_Date__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Fee_Paid__c</columns>
        <columns>License_Issue_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Submitted,Under Review,Pending Manager Approval,Approved By Manager</value>
        </filters>
        <filters>
            <field>Submission_Date__c</field>
            <operation>notEqual</operation>
            <value>LAST_N_MONTHS:3</value>
        </filters>
        <filters>
            <field>Submission_Date__c</field>
            <operation>notEqual</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Trans. - Not Closed, Submit &gt; 3M Ago</label>
    </listViews>
    <listViews>
        <fullName>All_Not_Submit_Delay</fullName>
        <columns>NAME</columns>
        <columns>Provider__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Status__c</columns>
        <columns>Last_Reached_Step__c</columns>
        <columns>Submitter__c</columns>
        <columns>Submission_Date__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Fee_Paid__c</columns>
        <columns>License_Issue_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>To Submit</value>
        </filters>
        <filters>
            <field>Submission_Date__c</field>
            <operation>notEqual</operation>
            <value>LAST_N_MONTHS:3</value>
        </filters>
        <filters>
            <field>Submission_Date__c</field>
            <operation>notEqual</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Trans. - Not Submit, Created &gt; 3M Ago</label>
    </listViews>
    <listViews>
        <fullName>My_All</fullName>
        <columns>NAME</columns>
        <columns>Provider__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Status__c</columns>
        <columns>Last_Reached_Step__c</columns>
        <columns>Submitter__c</columns>
        <columns>Submission_Date__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Fee_Paid__c</columns>
        <columns>License_Issue_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assigned_to_Me__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Trans. - All</label>
    </listViews>
    <listViews>
        <fullName>My_In_Closed_Last_Month</fullName>
        <columns>NAME</columns>
        <columns>Provider__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Status__c</columns>
        <columns>Last_Reached_Step__c</columns>
        <columns>Submitter__c</columns>
        <columns>Submission_Date__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Fee_Paid__c</columns>
        <columns>License_Issue_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Closed (Processed),Closed (License Issued / Updated)</value>
        </filters>
        <filters>
            <field>Date_Closed__c</field>
            <operation>equals</operation>
            <value>LAST_MONTH</value>
        </filters>
        <filters>
            <field>Assigned_to_Me__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Trans. - Closed Last Month</label>
    </listViews>
    <listViews>
        <fullName>My_In_Closed_This_Month</fullName>
        <columns>NAME</columns>
        <columns>Provider__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Status__c</columns>
        <columns>Last_Reached_Step__c</columns>
        <columns>Submitter__c</columns>
        <columns>Submission_Date__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Fee_Paid__c</columns>
        <columns>License_Issue_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Closed (Processed),Closed (License Issued / Updated)</value>
        </filters>
        <filters>
            <field>Date_Closed__c</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <filters>
            <field>Assigned_to_Me__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Trans. - Closed This Month</label>
    </listViews>
    <listViews>
        <fullName>My_In_Closed_This_Year</fullName>
        <columns>NAME</columns>
        <columns>Provider__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Status__c</columns>
        <columns>Last_Reached_Step__c</columns>
        <columns>Submitter__c</columns>
        <columns>Submission_Date__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Fee_Paid__c</columns>
        <columns>License_Issue_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Closed (Processed),Closed (License Issued / Updated)</value>
        </filters>
        <filters>
            <field>Date_Closed__c</field>
            <operation>equals</operation>
            <value>THIS_YEAR</value>
        </filters>
        <filters>
            <field>Assigned_to_Me__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Trans. - Closed This Year</label>
    </listViews>
    <listViews>
        <fullName>My_In_Progress</fullName>
        <columns>NAME</columns>
        <columns>Provider__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Status__c</columns>
        <columns>Last_Reached_Step__c</columns>
        <columns>Submitter__c</columns>
        <columns>Submission_Date__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Fee_Paid__c</columns>
        <columns>License_Issue_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Submitted,Under Review,Pending Manager Approval,Approved By Manager</value>
        </filters>
        <filters>
            <field>Assigned_to_Me__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Trans. - In Progress</label>
    </listViews>
    <listViews>
        <fullName>My_Not_Closed_Delay</fullName>
        <columns>NAME</columns>
        <columns>Provider__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Status__c</columns>
        <columns>Last_Reached_Step__c</columns>
        <columns>Submitter__c</columns>
        <columns>Submission_Date__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Fee_Paid__c</columns>
        <columns>License_Issue_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Submitted,Under Review,Pending Manager Approval,Approved By Manager</value>
        </filters>
        <filters>
            <field>Submission_Date__c</field>
            <operation>notEqual</operation>
            <value>LAST_N_MONTHS:3</value>
        </filters>
        <filters>
            <field>Submission_Date__c</field>
            <operation>notEqual</operation>
            <value>THIS_MONTH</value>
        </filters>
        <filters>
            <field>Assigned_to_Me__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Trans. - Not Closed, Submit &gt; 3M Ago</label>
    </listViews>
    <listViews>
        <fullName>My_Not_Submit_Delay</fullName>
        <columns>NAME</columns>
        <columns>Provider__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Status__c</columns>
        <columns>Last_Reached_Step__c</columns>
        <columns>Submitter__c</columns>
        <columns>Submission_Date__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Fee_Paid__c</columns>
        <columns>License_Issue_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>To Submit</value>
        </filters>
        <filters>
            <field>Submission_Date__c</field>
            <operation>notEqual</operation>
            <value>LAST_N_MONTHS:3</value>
        </filters>
        <filters>
            <field>Submission_Date__c</field>
            <operation>notEqual</operation>
            <value>THIS_MONTH</value>
        </filters>
        <filters>
            <field>Assigned_to_Me__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Trans. - Not Submit, Created &gt; 3M Ago</label>
    </listViews>
    <listViews>
        <fullName>My_Team_All</fullName>
        <columns>NAME</columns>
        <columns>Provider__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Status__c</columns>
        <columns>Last_Reached_Step__c</columns>
        <columns>Submitter__c</columns>
        <columns>Submission_Date__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Fee_Paid__c</columns>
        <columns>License_Issue_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assigned_to_Me_Or_Subordinates__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Team Trans. - All</label>
        <sharedTo>
            <role>Executive_and_Directors</role>
            <role>FCC_Supervisor</role>
            <role>R_P_Supervisor</role>
            <role>Regional_Director</role>
            <role>SLGSA_Supervisor</role>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Licensing Transactions</pluralLabel>
    <recordTypes>
        <fullName>Change_of_Address</fullName>
        <active>true</active>
        <label>Change of Address</label>
    </recordTypes>
    <recordTypes>
        <fullName>Close_Prior_Expiration</fullName>
        <active>true</active>
        <label>Close Prior Expiration</label>
    </recordTypes>
    <recordTypes>
        <fullName>FCC_Change_Room_Floor_Level</fullName>
        <active>true</active>
        <label>FCC Change Room / Floor Level</label>
    </recordTypes>
    <recordTypes>
        <fullName>FCC_Change_of_Household</fullName>
        <active>true</active>
        <label>FCC Change of Household</label>
    </recordTypes>
    <recordTypes>
        <fullName>FCC_Change_of_Name</fullName>
        <active>true</active>
        <label>FCC Change of Name</label>
    </recordTypes>
    <recordTypes>
        <fullName>FCC_Inactivate</fullName>
        <active>true</active>
        <label>FCC Inactivate</label>
    </recordTypes>
    <recordTypes>
        <fullName>FCC_License_Upgrade</fullName>
        <active>true</active>
        <label>FCC License Upgrade</label>
    </recordTypes>
    <recordTypes>
        <fullName>FCC_New_License</fullName>
        <active>true</active>
        <label>FCC New License</label>
    </recordTypes>
    <recordTypes>
        <fullName>FCC_Re_Active</fullName>
        <active>true</active>
        <label>FCC Re-Active</label>
    </recordTypes>
    <recordTypes>
        <fullName>FCC_Renewal</fullName>
        <active>true</active>
        <label>FCC Renewal</label>
    </recordTypes>
    <recordTypes>
        <fullName>Large_Group</fullName>
        <active>true</active>
        <description>This record type supports the License record for Large Group</description>
        <label>Large Group</label>
    </recordTypes>
    <recordTypes>
        <fullName>Re_issuance_of_License_Cert</fullName>
        <active>true</active>
        <label>Re-issuance of License Certificate</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Abused_or_neglected_desc_required</fullName>
        <active>true</active>
        <description>If Abused or neglected child = &quot;Yes&quot;, Abused or neglected a child Description is mandatory</description>
        <errorConditionFormula>ISPICKVAL( Abused_or_neglected_a_child__c , &quot;Yes&quot; )  &amp;&amp;  ISBLANK(  Abused_or_neglected_a_child_Description__c  )</errorConditionFormula>
        <errorDisplayField>Abused_or_neglected_a_child_Description__c</errorDisplayField>
        <errorMessage>If Abused or neglected child = &quot;Yes&quot;, Abused or neglected a child Description is mandatory</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Alcholic_Beverages_Required_Desc</fullName>
        <active>true</active>
        <description>Alcoholic beverages, narcotics or other drugs Description is mandatory if  	
Alcoholic Bev., Narcotics, Drugs Desc = &quot;Yes&quot;</description>
        <errorConditionFormula>ISPICKVAL( Use_of_Alcoholic_Bev_Narcotics_Drugs__c , &quot;Yes&quot; )  &amp;&amp;  ISBLANK( Alcoholic_Bev_Narcotics_Drugs_Desc__c )</errorConditionFormula>
        <errorDisplayField>Alcoholic_Bev_Narcotics_Drugs_Desc__c</errorDisplayField>
        <errorMessage>If Alcoholic Bev., Narcotics, Drugs Desc = &quot;Yes&quot;, Alcoholic beverages, narcotics or other drugs Description is mandatory</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Application_Certificate_with_EEC_Mandato</fullName>
        <active>true</active>
        <description>Previous Application / Certificate with EEC Description mandatory if Application / Certificate with EEC = &quot;Yes&quot;</description>
        <errorConditionFormula>ISPICKVAL( Previous_Application_Certif_with_EEC__c , &quot;Yes&quot; )  &amp;&amp;  ISBLANK( Prev_App_Certif_with_EEC_Descrip__c )</errorConditionFormula>
        <errorDisplayField>Prev_App_Certif_with_EEC_Descrip__c</errorDisplayField>
        <errorMessage>If Previous Application / Certificate with EEC = &quot;Yes&quot;, Previous Application / Certificate with EEC Description is mandatory</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Approv_Foster_Care_Prov_Des_Mand_If</fullName>
        <active>true</active>
        <description>Approved Foster Care Provider Description mandatory if Approved Foster Care Provider = Yes</description>
        <errorConditionFormula>ISPICKVAL( Approved_Foster_Care_Provider__c, &quot;Yes&quot;)  &amp;&amp;  ISBLANK( Approved_Foster_Care_Provider_Descrip__c )</errorConditionFormula>
        <errorDisplayField>Approved_Foster_Care_Provider_Descrip__c</errorDisplayField>
        <errorMessage>If Approved Foster Care Provider = &quot;Yes&quot;, Approved Foster Care Provider Description is mandatory</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Becoming_Foster_Care_Provider_Descrip_Ma</fullName>
        <active>true</active>
        <description>Becoming Foster Care Provider Description Mandatory if Becoming Foster Care Provider = &quot;Yes&quot;</description>
        <errorConditionFormula>ISPICKVAL( Becoming_Foster_Care_Provider__c , &quot;Yes&quot; )  &amp;&amp;  ISBLANK( Becoming_Foster_Care_Provider_Descrip__c )</errorConditionFormula>
        <errorDisplayField>Becoming_Foster_Care_Provider_Descrip__c</errorDisplayField>
        <errorMessage>If Becoming Foster Care Provider = &quot;Yes&quot;, Becoming Foster Care Provider Description is mandatory</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Belong_to_Food_Program</fullName>
        <active>true</active>
        <description>If Belong to Food Program = &quot;Yes&quot;, Which Food Program is mandatory</description>
        <errorConditionFormula>ISPICKVAL( Belong_to_Food_Program__c , &quot;Yes&quot; ) &amp;&amp; ISBLANK( Which_Food_Program__c )</errorConditionFormula>
        <errorDisplayField>Which_Food_Program__c</errorDisplayField>
        <errorMessage>If Belong to Food Program = &quot;Yes&quot;, Which Food Program is mandatory</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Business_Operated_Out_of_Own_Home_Des_Ma</fullName>
        <active>true</active>
        <description>Business Operated Out of Own Home Description Mandatory if Business Operated Out of Own Home = &quot;Yes&quot;</description>
        <errorConditionFormula>ISPICKVAL( Business_Operated_Out_of_Own_Home__c , &quot;Yes&quot; )  &amp;&amp;  ISBLANK( Bus_Operated_Out_of_Own_Home_Descrip__c )</errorConditionFormula>
        <errorDisplayField>Bus_Operated_Out_of_Own_Home_Descrip__c</errorDisplayField>
        <errorMessage>If Business Operated Out of Own Home = &quot;Yes&quot;, Business Operated Out of Own Home Description is mandatory</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CPR_Certified</fullName>
        <active>true</active>
        <description>If CPR Certified = &quot;Yes&quot;, CPR Certified Issue Date is mandatory</description>
        <errorConditionFormula>ISPICKVAL( CPR_Certified__c , &quot;Yes&quot; ) &amp;&amp; ISBLANK( CPR_Certification_Issue_Date__c )</errorConditionFormula>
        <errorDisplayField>CPR_Certification_Issue_Date__c</errorDisplayField>
        <errorMessage>If CPR Certified = &quot;Yes&quot;, CPR Certified Issue Date is mandatory</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cert_of_License_Revok_Suspend_Mand_If</fullName>
        <active>true</active>
        <description>Certificate of License Revoked / Suspended or Surrendered Description mandatory if Certificate of License Revoked / Suspended or Certificate of License Surrendered = &quot;Yes&quot;</description>
        <errorConditionFormula>OR( ISPICKVAL(  Certificate_of_License_Revoked_Suspend__c , &quot;Yes&quot; ), ISPICKVAL(  Certificate_or_License_Surrendered__c , &quot;Yes&quot; ))  &amp;&amp;  ISBLANK(  Revocation_Suspension_Surrender_Reas__c )</errorConditionFormula>
        <errorDisplayField>Revocation_Suspension_Surrender_Reas__c</errorDisplayField>
        <errorMessage>If Certificate of License Revoked / Suspended or Surrendered = &quot;Yes&quot;, Certificate of License Revoked / Suspended or Surrendered Description is mandatory</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Charged_or_Arrested_for_Crime</fullName>
        <active>true</active>
        <description>Charges description mandatory if Charged or Arrested for Crime = &quot;Yes&quot;</description>
        <errorConditionFormula>ISPICKVAL( Charged_or_Arrested_for_Crime__c , &quot;Yes&quot; ) &amp;&amp; ISBLANK( Charges_Description__c )</errorConditionFormula>
        <errorDisplayField>Charges_Description__c</errorDisplayField>
        <errorMessage>If Charged or Arrested for Crime = &quot;Yes&quot;, Charges Description is mandatory</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Child_Emergency_Injury_Last_3_Years</fullName>
        <active>true</active>
        <description>Child Emergency / Injury Last 3 Years description mandatory if Child Emergency / Injury Last 3 Years = &quot;Yes&quot;</description>
        <errorConditionFormula>ISPICKVAL( Child_Emergency_Injury_Last_3_Years__c , &quot;Yes&quot; ) &amp;&amp; ISBLANK( Child_Emerg_Injury_Last_3_Years_Descrip__c )</errorConditionFormula>
        <errorDisplayField>Child_Emerg_Injury_Last_3_Years_Descrip__c</errorDisplayField>
        <errorMessage>If Child Emergency / Injury Last 3 Years = &quot;Yes&quot;, Child Emergency / Injury Last 3 Years Description is mandatory</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Children_Home_School_Description_Mand_If</fullName>
        <active>true</active>
        <description>Children Home School Description Mandatory if Children Home School Description = &quot;YES&quot;</description>
        <errorConditionFormula>ISPICKVAL( Children_Home_Schooled__c , &quot;Yes&quot;)  &amp;&amp;  ISBLANK( Children_Home_Schooled_Description__c )</errorConditionFormula>
        <errorDisplayField>Children_Home_Schooled_Description__c</errorDisplayField>
        <errorMessage>If Children Are Home Schooled = &quot;Yes&quot;, Children Home Schooled Description is mandatory</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Date_Activity_Ends_License_Issue_Date</fullName>
        <active>true</active>
        <description>Date Activity Ends must be greater than the License Issue Date</description>
        <errorConditionFormula>Date_Activity_Ends__c  &lt;=   License_Issue_Date__c</errorConditionFormula>
        <errorDisplayField>Date_Activity_Ends__c</errorDisplayField>
        <errorMessage>Date Activity Ends must be greater than the License Issue Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Date_Care_Resumes_Latest_Date_Activity</fullName>
        <active>true</active>
        <description>Date Care Resumes must great than Latest Date Activity Ends</description>
        <errorConditionFormula>Date_Care_Resumes__c  &lt;=  Date_Activity_Ends__c</errorConditionFormula>
        <errorDisplayField>Date_Care_Resumes__c</errorDisplayField>
        <errorMessage>Date Care Resumes must great than Latest Date Activity Ends</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Date_Upgrading_Capacity_Training_Desc_Ma</fullName>
        <active>true</active>
        <description>If Took Upgrading Capacity Training = &quot;Yes&quot;, then Date Upgrading Capacity Training Description must be provided</description>
        <errorConditionFormula>ISPICKVAL( Took_Upgrading_Capacity_Training__c , &quot;Yes&quot;)  &amp;&amp; ISBLANK( Date_Upgrading_Capacity_Training_Taken__c )</errorConditionFormula>
        <errorDisplayField>Date_Upgrading_Capacity_Training_Taken__c</errorDisplayField>
        <errorMessage>If Took Upgrading Capacity Training = &quot;Yes&quot;, then Date Upgrading Capacity Training Description must be provided</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Dealings_with_Child_Protection_Child_W</fullName>
        <active>true</active>
        <description>Dealings with Child Protection / Child Welfare Agency description mandatory if Dealings with Child Protection / Child Welfare Agency = &quot;Yes&quot;</description>
        <errorConditionFormula>ISPICKVAL( Dealings_with_Child_Prot_Child_Welfar__c , &quot;Yes&quot; ) &amp;&amp; ISBLANK( Dealing_with_Child_Prot_Welfar_Descri__c )</errorConditionFormula>
        <errorDisplayField>Dealing_with_Child_Prot_Welfar_Descri__c</errorDisplayField>
        <errorMessage>If Dealings with Child Protection / Child Welfare Agency = &quot;Yes&quot;, Dealings with Child Protection / Child Welfare Agency Description is mandatory</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>First_Aid_Certified</fullName>
        <active>true</active>
        <description>If First Aid Certified = &quot;Yes&quot;, First Aid Certified Issue Date is mandatory</description>
        <errorConditionFormula>ISPICKVAL( First_Aid_Certified__c , &quot;Yes&quot; ) &amp;&amp; ISBLANK( First_Aid_Certification_Issue_Date__c )</errorConditionFormula>
        <errorDisplayField>First_Aid_Certification_Issue_Date__c</errorDisplayField>
        <errorMessage>If First Aid Certified = &quot;Yes&quot;, First Aid Certified Issue Date is mandatory</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>If_Elec_Com_Submitter_Should_be_Portal_U</fullName>
        <active>false</active>
        <errorConditionFormula>IF( Provider__r.Electronic_Communication__c = TRUE,  IF(  CONTAINS(TEXT(Submitter__r.UserType) , &quot;Customer&quot;), FALSE, TRUE), TRUE)</errorConditionFormula>
        <errorDisplayField>Submitter__c</errorDisplayField>
        <errorMessage>If Provider uses Electronic Communication, Submitter should be a valid portal user.</errorMessage>
    </validationRules>
</CustomObject>